buildscript {
    repositories {
	jcenter()
        mavenCentral()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
    }
}


apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'checkstyle'
apply plugin: 'maven'

group = "de.peass"
version = "0.1-SNAPSHOT"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    mavenLocal()
    maven{
		url 'https://oss.sonatype.org/content/repositories/snapshots'
	}
}


dependencies {
   compile group: "de.dagere.kopeme", name: "kopeme-junit", version: "0.11-SNAPSHOT"
   compile group: "de.dagere.kopeme", name: "kopeme-junit3", version: "0.11-SNAPSHOT"
   compile group: 'commons-io', name: 'commons-io', version: '2.4'
   compile group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.23'
}

test {
//	jvmArgs "-XX:+PrintCompilation" , "-XX:+PrintGC"
//    testLogging.showStandardStreams = true
//    jvmArgs "-Xmx1g"
    // jvmArgs "-agentpath:.../vm_logging/loggingAgent.o"
    // Uncoment this, if you want to measure CPU temperature along with workload duration
  // exclude 'de/precision/**'
}
